# django-granian-repro

./: .dockerignore  Dockerfile  pyproject.toml
main/: asgi.py  consumers.py  settings.py  urls.py
main/middlewares/: healthcheck.py
